fix: make groweditor work on chrome
Because chrome was rendering bigger scrollbars than firefox, the magic offset
we were using wasn't enough. I could have just increased the offset, but
I dug a bit deeper and found a cleaner solution.

Turns out we didn't need to reset the minheight at all, just setting it
once correctly was enough.

It also sets overflow auto instead of overflow scroll, to make the
unnecessary scrollbars go away.

--- a/embeddable-say-editor/app/styles/app.scss
+++ b/embeddable-say-editor/app/styles/app.scss
@@ -88,15 +88,6 @@ div.table-of-contents {
     }
   }
 
-  .say-editor__paper {
-    &.min-content {
-      min-height: min-content;
-
-      .say-content {
-        min-height: min-content;
-      }
-    }
-  }
   .say-toolbar .say-toolbar__side-dropdown .au-c-pill{
     width: max-content;
   }
